Fix layout issue in search box in Firefox 62.0

--- a/novam/widgets.css
+++ b/novam/widgets.css
@@ -268,6 +268,7 @@ fieldset.SearchBox
 	overflow: hidden;
 
 	line-height: 26px;
+	white-space: nowrap;
 }
 
 fieldset.SearchBox label
